# gourmely-print-bridge

./: .gitattributes  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/workflows/: cert-renew.yml  dns-upsert.yml  release.yml
ops/: .gitignore  README.md
src/: main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/certs/: fullchain.pem  privkey.pem
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  printer.rs  server.rs  tray.rs
src-tauri/tests/: server_health.rs  tls_smoke.rs
